Commit al master del blog

--- a/blog1.html
+++ b/blog1.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="stiles/stile.css" />
 </head>
 <body>
-    <h1>Haciendo un blog :)</h1>
-    <p>parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo atractivo para ti </h1>
+            <p>Cosas interesantes para tus gustos y colores :D</p>
+        </div>
+    </div>
 </body>
 </html>
