--- a/blog1.html
+++ b/blog1.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Titulo atractivo para ti </h1>
             <p>Cosas interesantes para tus gustos y colores :D</p>
