--- a/blog1.html
+++ b/blog1.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Blog Cool
+            <span id="tagline">bolg de confianza :)</span>
         </div>
         <div id="post">
             <h1>Titulo atractivo para ti </h1>
