--- a/blog1.html
+++ b/blog1.html
@@ -12,7 +12,7 @@
         <div id="post">
             <h1>Titulo atractivo para ti </h1>
             <p>Cosas interesantes para tus gustos y colores :D</p>
-            <p>Agregando un nuevo parrafo al blog personal y muy bonita :D</p>
+            <p>Agregando un nuevo parrafo al blog personal y muy bonita</p>
         </div>
     </div>
 </body>
