--- a/blog1.html
+++ b/blog1.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imgs/pika.png">
             BlogCool
             <span id="tagline">bolg de confianza :)</span>
         </div>
